--- a/pertroqwiq/pubspec.yaml
+++ b/pertroqwiq/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   provider: ^6.1.1
   equatable: ^2.0.5
   toastification: ^1.2.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
